<resources>
    <string name="app_name">Know Me</string>
    <string name="hint_user_name">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_btn_login">Login</string>
    <string name="text_dont_have_account">¿No tienes cuenta?,</string>
    <string name="text_create_account">Crear cuenta</string>
    <string name="hint_confirm_password">confirmar contraseña</string>
    <string name="text_create_account_now">crea una aquí</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Correo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_home_bottombar">Inicio</string>
    <string name="text_profile_bottombar">Pérfil</string>
    <string name="text_search_bottombar">Búscar</string>
    <string name="user_test">Pepito Lopez</string>
    <string name="title_image">\"Todo copas en la playa\"</string>
    <string name="lorem">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen. No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en documentos electrónicos, quedando esencialmente igual al original. Fue popularizado en los 60s con la creación de las hojas \"Letraset\", las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.</string>
    <string name="transition_fade">fadeTransition</string>
    <string name="post_new_titleHint">Título</string>
    <string name="post_new_descriptionHint">Descripción</string>
    <string name="post_new_create_button">Crear Post</string>


    <string name="facebook_app_id">967378216803667</string>
    <string name="fb_login_protocol_scheme">fb967378216803667</string>
    <string name="recycler_item_users_title">Título</string>
    <string name="recycler_item_users_subtitle">subtitle</string>
    <string name="text_active_android">interactor with active android</string>
</resources>
