<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.knowme.knowme.auth.view.CreateAccountActivity">

    <!-- include layout in this case an toolbar -->
    <include layout="@layout/actionbar_toolbar"> </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
            <!-- scrollview for design -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/paddingHorizontal"
                    >
                    <!-- email -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_space"
                        android:theme="@style/EditTextBlack">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <!-- user name -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_space"
                        android:theme="@style/EditTextBlack">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_name"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <!--user name -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_space"
                        android:theme="@style/EditTextBlack">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/user_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_user_name"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <!-- password -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_space"
                        android:theme="@style/EditTextBlack">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <!-- confirm password -->
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/default_space"
                        android:theme="@style/EditTextBlack">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/confirm_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/hint_confirm_password"
                            />
                    </android.support.design.widget.TextInputLayout>
                    <!-- create account -->
                    <Button
                        android:id="@+id/joinUsButton"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_button"
                        android:text="@string/text_create_account"
                        android:layout_marginTop="@dimen/paddingHorizontal"
                        android:theme="@style/RaiseButtonDark"/>
                </LinearLayout>
            </ScrollView>

            <ProgressBar
                android:id="@+id/progress_bar_create_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
