<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.knowme.knowme.post.view.NewPostActivity">

    <include layout="@layout/actionbar_toolbar"> </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <ImageView
            android:id="@+id/image_view_detail_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:scaleType="centerCrop"
            android:background="@color/cardview_light_background"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_marginTop="@dimen/default_space"
            android:layout_marginLeft="@dimen/default_space"
            android:layout_marginRight="@dimen/default_space"
            android:theme="@style/EditTextBlack"
            >
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/post_new_titleEditText"
                    android:hint="@string/post_new_titleHint"
                    />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/default_space"
            android:layout_marginRight="@dimen/default_space"
            android:layout_weight="0.2"
            android:theme="@style/EditTextBlack"
            >
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/post_new_EditText"
                android:hint="@string/post_new_descriptionHint"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:layout_marginLeft="@dimen/default_space"
            android:layout_marginRight="@dimen/default_space"
            android:id="@+id/post_new_create"
            android:text="@string/post_new_create_button"
            android:theme="@style/RaiseButtonDark"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>

