<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_image_view"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="@dimen/d2_space"
            android:layout_marginLeft="@dimen/d2_space"
            android:layout_marginRight="@dimen/d2_space"
            android:layout_marginBottom="@dimen/default_space"
            android:src="@drawable/placeholder"
            android:elevation="@dimen/cardview_corner_radius" />

        <ImageView
            android:id="@+id/detail_arrow_image_view"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:backgroundTint="@color/colorBlue"
            android:layout_marginRight="@dimen/d2_space"
            android:background="@drawable/ic_action_arrow_right"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/font_size_big"
            android:text="@string/recycler_item_users_title"
            android:layout_toRightOf="@+id/avatar_image_view"
            android:layout_marginTop="@dimen/d2_space"
            />
        <!-- android:layout_centerInParent="true" -->

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recycler_item_users_subtitle"
            android:textColor="@color/colorLigthGray"
            android:textSize="@dimen/font_size_small"
            android:layout_below="@+id/title"
            android:layout_alignLeft="@id/title"
            />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:layout_marginTop="@dimen/default_space"
            android:layout_toRightOf="@+id/avatar_image_view"
            android:layout_alignLeft="@+id/subtitle"
            android:layout_toLeftOf="@+id/detail_arrow_image_view"
            android:maxLines="2"
            android:textColor="@color/colorBlack"
            android:text="@string/lorem" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/default_space"
            android:background="@color/colorLigthGray"
            android:layout_below="@+id/avatar_image_view"
            ></View>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>